gcc/testsuite/rust/rustc/ui/issues/issue-36638.rs
struct Foo<Self>(Self);
// { dg-error ".E0392." "" { target *-*-* } .-1 }
// { dg-error ".E0392." "" { target *-*-* } .-2 }

trait Bar<Self> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

